2002-08-21  Theodore A. Roth  <troth@verinet.com>

	* doc/api/inline_asm.dox: Move old history into non-doxy comment.
		Change GCC-AVR to AVR-GCC. Add note about new location.

2002-08-21  Theodore A. Roth  <troth@verinet.com>

	* configure.in(AM_INIT_AUTOMAKE): Bump version.
	* doc/api/inline_asm.dox: Removed `n' and `v' constraints from table.
		Grammar fixes. Add link to gcc online docs.

2002-08-16  Theodore A. Roth  <troth@verinet.com>

	* configure.in(AM_INIT_AUTOMAKE): Bump version.
	* doc/api/Makefile.am(EXTRA_DIST): Add tools-install.dox file.
	* doc/api/dox_html_header: Fix title.
	* doc/api/tools.dox: New file.

2002-08-14  Theodore A. Roth  <troth@verinet.com>

	* doc/api/inline_asm.dox: Fixed variable name in clobber section. New 
		section C stubs added. (thanks to Harald Kipp)

2002-08-14  Theodore A. Roth  <troth@verinet.com>

	* doc/api/faq.dox: Minor dox update.
	* doc/api/inline_asm.dox: Minor dox update.
	* doc/api/main_page.dox: Minor dox update.

2002-08-13  Theodore A. Roth  <troth@verinet.com>

	* doc/api/doxygen.config.in: Updated to use doxygen-1.2.17.

2002-08-13  Theodore A. Roth  <troth@verinet.com>

	* configure.in(AM_INIT_AUTOMAKE): Bump version.
	* doc/api/acknowledge.dox: Minor updates.

2002-08-13  Theodore A. Roth  <troth@verinet.com>

	* libc/string/memset.S: Fix dox comment (s/src/dest/).

2002-08-12  Theodore A. Roth  <troth@verinet.com>

	* configure.in(AM_INIT_AUTOMAKE): Bump version.

2002-08-12  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* crt1/gcrt1.S: avr-gcc >= 3.3 is required.
	* avr-libc.spec.in: avr-gcc >= 3.3 is required.

2002-08-09  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/faq.dox: add a subsection about _BV().

2002-08-09  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/avr/io.h: add documentation.

2002-08-09  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/Makefile.am: Black magic to split a long table.
	* doc/api/interrupts.dox: minor changes and additions.
