@@ -148,7 +148,19 @@
 
 #endif /* !_SFR_ASM_COMPAT */
 
+/** \name Bit manipulation */
+
+/*@{*/
+/** \def _BV
+    \ingroup avr_sfr
+
+    \code #include <avr/io.h>\endcode
+
+    Converts a bit number into a byte value. */
+    
 #define _BV(bit) (1 << (bit))
+
+/*@}*/
 
 #ifndef __ASSEMBLER__
 
@@ -160,18 +172,113 @@
 #define _SFR_WORD(sfr) _MMIO_WORD(_SFR_ADDR(sfr))
 
 /* The outb/outw macros now have the correct order of arguments.  */
+
+/** \name IO operations */
+
+/*@{*/
+
+/** \def inb
+    \ingroup avr_sfr
+
+    \code #include <avr/io.h>\endcode
+
+    Read a byte from IO register \c sfr. */
+
 #define inb(sfr) _SFR_BYTE(sfr)
+
+/** \def inw
+    \ingroup avr_sfr
+
+    \code #include <avr/io.h>\endcode
+
+    Read a 16-bit word from IO register pair \c sfr. */
+
 #define inw(sfr) _SFR_WORD(sfr)
+
+/** \def outb
+    \ingroup avr_sfr
+
+    \code #include <avr/io.h>\endcode
+
+    Write \c val to IO register \c sfr. */
+
 #define outb(sfr, val) (_SFR_BYTE(sfr) = (val))
+
+/** \def outw
+    \ingroup avr_sfr
+
+    \code #include <avr/io.h>\endcode
+
+    Write the 16-bit value \c val to IO register pair \c sfr.  Care
+    will be taken to write the lower register first.  When used to
+    update 16-bit registers where the timing is critical and the
+    operation can be interrupted, the programmer is responsible to
+    disable interrupts before accessing the register pair. */
+
 #define outw(sfr, val) (_SFR_WORD(sfr) = (val))
 
+/*@}*/
+
+/** \name IO register bit manipulation */
+
+/*@{*/
+
+/** \def cbi
+    \ingroup avr_sfr
+
+    \code #include <avr/io.h>\endcode
+
+    Clear bit \c bit in IO register \c sfr. */
+
 #define cbi(sfr, bit) (_SFR_BYTE(sfr) &= ~_BV(bit))
+
+/** \def sbi
+    \ingroup avr_sfr
+
+    \code #include <avr/io.h>\endcode
+
+    Set bit \c bit in IO register \c sfr. */
+
 #define sbi(sfr, bit) (_SFR_BYTE(sfr) |= _BV(bit))
 
+
+/** \def bit_is_set
+    \ingroup avr_sfr
+
+    \code #include <avr/io.h>\endcode
+
+    Test whether bit \c bit in IO register \c sfr is set. */
+
 #define bit_is_set(sfr, bit) (inb(sfr) & _BV(bit))
+
+/** \def bit_is_clear
+    \ingroup avr_sfr
+
+    \code #include <avr/io.h>\endcode
+
+    Test whether bit \c bit in IO register \c sfr is clear. */
+
 #define bit_is_clear(sfr, bit) (~inb(sfr) & _BV(bit))
+
+/** \def loop_until_bit_is_set
+    \ingroup avr_sfr
+
+    \code #include <avr/io.h>\endcode
+
+    Wait until bit \c bit in IO register \c sfr is set. */
+
 #define loop_until_bit_is_set(sfr, bit) do { } while (bit_is_clear(sfr, bit))
+
+/** \def loop_until_bit_is_clear
+    \ingroup avr_sfr
+
+    \code #include <avr/io.h>\endcode
+
+    Wait until bit \c bit in IO register \c sfr is clear. */
+
 #define loop_until_bit_is_clear(sfr, bit) do { } while (bit_is_set(sfr, bit))
+
+/*@}*/
 
 #endif /* !__ASSEMBLER__ */
 
